tests/snapshots/integration/integration__bun_run_src_com_partial.snap
---
source: tests/integration.rs
expression: "normalize_items(&items, project_path)"
---
[
  {
    "value": "src/components/",
    "display_override": "src/components/",
    "description": "directory",
    "style": {
      "fg": "blue"
    }
  }
]
