tests/snapshots/integration/integration__bun_run_src_components_path.snap
---
source: tests/integration.rs
expression: "normalize_items(&items, project_path)"
---
[
  {
    "value": "src/components/button.tsx ",
    "display_override": "src/components/button.tsx"
  }
]
