tests/snapshots/integration/integration__bun_run_src_path.snap
---
source: tests/integration.rs
expression: "normalize_items(&items, project_path)"
---
[
  {
    "value": "src/components/",
    "display_override": "src/components/",
    "style": {
      "fg": "blue"
    }
  },
  {
    "value": "src/main.ts ",
    "display_override": "src/main.ts"
  },
  {
    "value": "src/utils.ts ",
    "display_override": "src/utils.ts"
  }
]
