tests/snapshots/integration/integration__display_value_scenarios.snap
---
source: tests/integration.rs
expression: items
---
[
  {
    "value": "hw",
    "display_override": "Hello World",
    "description": "explicit value"
  },
  {
    "value": "OnlyDisplay ",
    "display_override": "OnlyDisplay",
    "description": "no explicit value"
  },
  {
    "value": "",
    "display_override": "EmptyValue",
    "description": "empty value"
  }
]
